<resources>
    <string name="app_name">互动白板</string>
    <string name="powered">Powered by anyrtc.io</string>
    <string name="username_please">请输入用户名</string>
    <string name="roomId">请输入房间号</string>
    <string name="login">登录</string>
    <string name="app_share">anyRTC 互动白板</string>
    <string name="menu">菜单</string>
    <string name="boardEditable">涂鸦开关</string>
    <string name="aboutGraffiti">涂鸦相关</string>
    <string name="selectTools">选择工具</string>
    <string name="graffitiColor">涂鸦颜色</string>
    <string name="undo">撤销</string>
    <string name="redo">重做</string>
    <string name="clearGraffiti">清空涂鸦</string>
    <string name="clearAll">清空涂鸦和背景</string>
    <string name="reset">重置</string>
    <string name="aboutFont">字体相关</string>
    <string name="fontSize">字体大小</string>
    <string name="fontColor">字体颜色</string>
    <string name="aboutPainters">画笔工具</string>
    <string name="strokeWidth">线宽粗细</string>
    <string name="painterColor">画笔颜色</string>
    <string name="aboutBoard">白板相关</string>
    <string name="add">新增</string>
    <string name="delete">删除</string>
    <string name="prevPage">上一页</string>
    <string name="nextPage">下一页</string>
    <string name="boardScale">白板缩放</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="tools">工具栏</string>
    <string name="mouse">鼠标</string>
    <string name="eraser">橡皮擦</string>
    <string name="laserPointer">激光笔</string>
    <string name="textTool">文本工具</string>
    <string name="selectRectangle">选框工具</string>
    <string name="graffiti">涂鸦</string>
    <string name="pencil">画笔</string>
    <string name="rectangle">矩形</string>
    <string name="oval">椭圆</string>
    <string name="arrows">箭头直线</string>
    <string name="line">直线</string>
    <string name="red">红色</string>
    <string name="green">绿色</string>
    <string name="blue">蓝色</string>
    <string name="backgroundColor">背景颜色</string>
    <string name="graffitiThickness">画笔粗细</string>
    <string name="backgroundImage">背景图片</string>
    <string name="backgroundImageUrl">背景图片URL</string>
    <string name="loading">加载中</string>
    <string name="defaultRatio">4:3</string>
    <string name="widescreen_ratio">16:9</string>
    <string name="boardRatio">白板比例</string>
</resources>